# rustworkx-backend

./: README.md  pyproject.toml
examples/: simple.py
src/_rustworkx_backend/: __init__.py
src/rustworkx_backend/: __init__.py  _converter.py  _graph.py  _interface.py
